--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
     "com.unity.2d.sprite": "1.0.0",
+    "com.unity.2d.tilemap": "1.0.0",
+    "com.unity.2d.tilemap.extras": "1.8.0-preview",
     "com.unity.cinemachine": "2.6.3",
     "com.unity.collab-proxy": "1.3.9",
     "com.unity.ide.rider": "2.0.7",
@@ -8,7 +10,7 @@
     "com.unity.ide.vscode": "1.2.3",
     "com.unity.inputsystem": "1.0.2",
     "com.unity.postprocessing": "3.0.3",
-    "com.unity.render-pipelines.universal": "10.2.2",
+    "com.unity.render-pipelines.universal": "10.4.0",
     "com.unity.test-framework": "1.1.24",
     "com.unity.textmeshpro": "3.0.1",
     "com.unity.timeline": "1.4.7",
